added social media info to about-us page

--- a/about-us.html
+++ b/about-us.html
@@ -6,6 +6,7 @@
     <title>All the Ducks | About Us</title>
     <link rel="stylesheet" href="css/foundation.css"/>
     <link rel="stylesheet" href="css/atd.css"/>
+    <link rel="stylesheet" type="text/css" href="css/flaticon.css">
     <script src="js/vendor/modernizr.js"></script>
 </head>
 <body>
@@ -52,7 +53,7 @@
         <p></p>
     </div>
     <div class="row">
-        <div class="small-centered large-uncentered large-3 columns"><img src="https://secure.gravatar.com/avatar/e076130a956dee9c127297e88072ab63?size=200px"></div>
+        <div class="small-centered large-uncentered large-3 columns"><img style="border-radius: .5em" src="https://secure.gravatar.com/avatar/e076130a956dee9c127297e88072ab63?size=200px"></div>
         <div class="large-9 columns">
             <h3>Shane Argo</h3>
             <p><i>Director and co-founder.</i></p>
@@ -65,21 +66,31 @@
             <p>He is also the developer of the <a href="http://hstsiis.codeplex.com">HTTP Strict Transport Security IIS Module</a>.</p>
             <p>Shane is the co-recipient of the Blackboard Learn Innovative Development Catalyst Award 2013 for his participation in the development of JS Hacks.
                 He also received the University of the Sunshine Coast Vice-Chancellor and President's Award for Excellence in Service in 2013.</p>
+            <p>
+                <i class="flaticon-social"></i>  <a href="https://twitter.com/shane_argo">@shane_argo</a><br>
+                <i class="flaticon-linkedin12"></i>  <a href="https://linkedin.com/in/sjargo">linkedin.com/in/sjargo</a><br>
+                <i class="flaticon-email26"></i> sha<a href="http://www.google.com/recaptcha/mailhide/d?k=01VOmTCzxQIBVs1uf9U9xWqg==&amp;c=GY-5tvW6mvKnGLY9PG5CXVUCUMB3zo3DfSAdsJrXk_0=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501VOmTCzxQIBVs1uf9U9xWqg\75\75\46c\75GY-5tvW6mvKnGLY9PG5CXVUCUMB3zo3DfSAdsJrXk_0\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@alltheducks.com
+            </p>
         </div>
     </div>
     <div class="row">
-        <div class="small-centered large-uncentered large-3 columns"><img src="https://secure.gravatar.com/avatar/e8fc47f38a0e3d3b2bb29f437fce714d?size=200px"></div>
+        <div class="small-centered large-uncentered large-3 columns"><img style="border-radius: .5em" src="https://secure.gravatar.com/avatar/e8fc47f38a0e3d3b2bb29f437fce714d?size=200px"></div>
         <div class="large-9 columns">
             <h3>Wiley Fuller</h3>
             <p><i>Director and co-founder.</i></p>
             <p>Wiley has over ten years experience working in the Australian Higher Education industry, developing maintaining and support Learning Management Systems.
             In addition to this, Wiley also has extensive experience in Systems Integration and bespoke application development.</p>
-            <p>Wiley has developed and contributed to a number of widely used tools in the Blackboard open source community, such as the
+            <p>Wiley is well known in the Blackboard community, and has developed and contributed to a number of widely used tools in the Blackboard open source community, such as the
                 <a href="http://projects.oscelot.org/gf/project/studentview/">Student View Building Block</a>,
                 <a href="http://projects.oscelot.org/gf/project/jshack/">Javascript Hacks</a>,
                 <a href="http://projects.oscelot.org/gf/project/bbeclipseplugin/">Blackboard Eclipse Plugin</a>, and the B2Deploy Ant Task.
             He has also developed a large number of Building Blocks and system integrations for his employers.</p>
             <p>Wiley is the recipient of two Blackboard Catalyst awards. One for community contributions, and another award for JS Hacks with Shane Argo.</p>
+            <p>
+                <i class="flaticon-social"></i>  <a href="https://twitter.com/wileyfuller">@wileyfuller</a><br>
+                <i class="flaticon-linkedin12"></i>  <a href="https://linkedin.com/in/wileyfuller">linkedin.com/in/wileyfuller</a><br>
+                <i class="flaticon-email26"></i> wil<a href="http://www.google.com/recaptcha/mailhide/d?k=01VOmTCzxQIBVs1uf9U9xWqg==&amp;c=N8o8Pn5eQJPAGEQGdFKTx-rkAkZGxgpKTl98AT2Do9o=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501VOmTCzxQIBVs1uf9U9xWqg\75\75\46c\75N8o8Pn5eQJPAGEQGdFKTx-rkAkZGxgpKTl98AT2Do9o\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@alltheducks.com
+            </p>
             
         </div>
     </div>
