fixed some urls and added a contact-us page

--- a/about-us.html
+++ b/about-us.html
@@ -13,7 +13,7 @@
 <nav class="top-bar" data-topbar>
     <ul class="title-area">
         <li class="name">
-            <h1><a href="#"><img src="img/alltheduck.svg"
+            <h1><a href="/"><img src="img/alltheduck.svg"
                                  style="height: 1.5em;width: auto;"> <b>All the
                 Ducks</b></a></h1>
 
@@ -36,7 +36,7 @@
                 <a href="about-us.html">About Us</a>
             </li>
             <li>
-                <a href="#">Contact Us</a>
+                <a href="contact-us.html">Contact Us</a>
             </li>
         </ul>
 
