--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav class="top-bar" data-topbar>
       <ul class="title-area">
           <li class="name">
-              <h1><a href="#"><img src="img/alltheduck.svg" style="height: 1.5em;width: auto;"> <b>All the Ducks</b></a></h1>
+              <h1><a href="/"><img src="img/alltheduck.svg" style="height: 1.5em;width: auto;"> <b>All the Ducks</b></a></h1>
 
           </li>
       </ul>
@@ -33,7 +33,7 @@
                   <a href="about-us.html">About Us</a>
               </li>
               <li>
-                  <a href="#">Contact Us</a>
+                  <a href="contact-us.html">Contact Us</a>
               </li>
           </ul>
 
