got the contact form working

--- a/about-us.html
+++ b/about-us.html
@@ -48,12 +48,9 @@
 </nav>
 <div class="row">
     <div class="large-12 columns">
-        <h2>About Us</h2>
-
-        <p></p>
-    </div>
+    <h2>About Us</h2>
     <div class="row">
-        <div class="small-centered large-uncentered large-3 columns"><img style="border-radius: .5em" src="https://secure.gravatar.com/avatar/e076130a956dee9c127297e88072ab63?size=200px"></div>
+        <div class="large-3 columns"><img style="border-radius: .5em" src="https://secure.gravatar.com/avatar/e076130a956dee9c127297e88072ab63?size=200px"></div>
         <div class="large-9 columns">
             <h3>Shane Argo</h3>
             <p><i>Director and co-founder.</i></p>
@@ -74,7 +71,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="small-centered large-uncentered large-3 columns"><img style="border-radius: .5em" src="https://secure.gravatar.com/avatar/e8fc47f38a0e3d3b2bb29f437fce714d?size=200px"></div>
+        <div class="large-3 columns"><img style="border-radius: .5em" src="https://secure.gravatar.com/avatar/e8fc47f38a0e3d3b2bb29f437fce714d?size=200px"></div>
         <div class="large-9 columns">
             <h3>Wiley Fuller</h3>
             <p><i>Director and co-founder.</i></p>
@@ -93,6 +90,7 @@
             </p>
             
         </div>
+    </div>
     </div>
 </div>
 
