--- a/contact-failure.html
+++ b/contact-failure.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All the Ducks | Welcome</title>
+    <title>All the Ducks | Thanks for contacting us.</title>
     <link rel="stylesheet" href="css/foundation.css" />
       <link rel="stylesheet" href="css/atd.css" />
     <script src="js/vendor/modernizr.js"></script>
@@ -43,34 +43,25 @@
           </ul>
       </section>
   </nav>
-  <section class="hp-banner">
     <div class="row">
       <div class="large-12 columns">
-        <h1>All the Ducks</h1>
-        <h3>Ed-Tech Products and Services</h3>
-      </div>
-    </div>
-    <div class="floatingduck">
-        <img src="img/alltheduck.svg">
-    </div>  
-  </section>
-    
-    <div class="row">
-      <div class="large-12 columns">
-      	<div class="panel">
-	        <h3>Educational Technology Development Services</h3>
-	        <div class="row">
-	        	<div class="large-4 medium-4 columns">
-	    		<p><a href="services.html">Custom Blackboard Development</a><br />Need a custom Building Block written for your institution? <a href="contact-us.html">Talk to us.</a></p>
-	    	</div>
-	        	<div class="large-4 medium-4 columns">
-	        		<p><a href="services.html">OSS Maintenance and Support</a><br />Development, Maintenance and Extension for Open Source LMS projects. <a href="services.html">What we can offer.</a></p>
-	        	</div>
-	        	<div class="large-4 medium-4 columns">
-	        		<p><a href="services.html">LMS Extension Development Training</a><br />Need training in how to write Blackboard Building Blocks? <a href="contact-us.html">Talk to us.</a></p>
-	        	</div>        
-					</div>
-      	</div>
+          <h2>Woah, something just went wrong!</h2>
+          <div class="row">
+              <div class="small-6 columns">
+              <img src="img/sorry-pony.png">
+              </div>
+              <div class="small-6 columns">
+              <p>We're not sure what just happened, but please email us directly at:
+                  <a href="mailto:wiley@alltheducks.com,shane@alltheducks.com?subject=Question about all the ducks">wiley@alltheducks.com and shane@alltheducks.com</a>, and ask us directly. </p>
+              </div>
+          </div>
+          <div class="row">
+              <div class="small-12 columns">
+                  <label>Here is what you asked (so you can copy and paste it)
+                <textarea>!!!CONTENT!!!</textarea>
+                  </label>
+              </div>
+          </div>
       </div>
     </div>
 
