--- a/contact-success.html
+++ b/contact-success.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All the Ducks | Welcome</title>
+    <title>All the Ducks | Thanks for contacting us.</title>
     <link rel="stylesheet" href="css/foundation.css" />
       <link rel="stylesheet" href="css/atd.css" />
     <script src="js/vendor/modernizr.js"></script>
@@ -43,34 +43,11 @@
           </ul>
       </section>
   </nav>
-  <section class="hp-banner">
     <div class="row">
       <div class="large-12 columns">
-        <h1>All the Ducks</h1>
-        <h3>Ed-Tech Products and Services</h3>
-      </div>
-    </div>
-    <div class="floatingduck">
-        <img src="img/alltheduck.svg">
-    </div>  
-  </section>
-    
-    <div class="row">
-      <div class="large-12 columns">
-      	<div class="panel">
-	        <h3>Educational Technology Development Services</h3>
-	        <div class="row">
-	        	<div class="large-4 medium-4 columns">
-	    		<p><a href="services.html">Custom Blackboard Development</a><br />Need a custom Building Block written for your institution? <a href="contact-us.html">Talk to us.</a></p>
-	    	</div>
-	        	<div class="large-4 medium-4 columns">
-	        		<p><a href="services.html">OSS Maintenance and Support</a><br />Development, Maintenance and Extension for Open Source LMS projects. <a href="services.html">What we can offer.</a></p>
-	        	</div>
-	        	<div class="large-4 medium-4 columns">
-	        		<p><a href="services.html">LMS Extension Development Training</a><br />Need training in how to write Blackboard Building Blocks? <a href="contact-us.html">Talk to us.</a></p>
-	        	</div>        
-					</div>
-      	</div>
+          <h2>Thanks for contacting us!</h2>
+
+          <p>We'll reply to you as soon as humanly possible. </p>
       </div>
     </div>
 
