--- a/contact-us.html
+++ b/contact-us.html
@@ -10,6 +10,16 @@
     <script src="js/vendor/modernizr.js"></script>
 </head>
 <body>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-48874971-1', 'alltheducks.com');
+    ga('send', 'pageview');
+
+</script>
 <nav class="top-bar" data-topbar>
     <ul class="title-area">
         <li class="name">
