--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-48874971-1', 'alltheducks.com');
+      ga('send', 'pageview');
+
+  </script>
   <nav class="top-bar" data-topbar>
       <ul class="title-area">
           <li class="name">
@@ -52,29 +62,39 @@
     </div>
     <div class="floatingduck">
         <img src="img/alltheduck.svg">
-    </div>  
-  </section>
-    
-    <div class="row">
-      <div class="large-12 columns">
-      	<div class="panel">
-	        <h3>Educational Technology Development Services</h3>
-	        <div class="row">
-	        	<div class="large-4 medium-4 columns">
-	    		<p><a href="services.html">Custom Blackboard Development</a><br />Need a custom Building Block written for your institution? <a href="contact-us.html">Talk to us.</a></p>
-	    	</div>
-	        	<div class="large-4 medium-4 columns">
-	        		<p><a href="services.html">OSS Maintenance and Support</a><br />Development, Maintenance and Extension for Open Source LMS projects. <a href="services.html">What we can offer.</a></p>
-	        	</div>
-	        	<div class="large-4 medium-4 columns">
-	        		<p><a href="services.html">LMS Extension Development Training</a><br />Need training in how to write Blackboard Building Blocks? <a href="contact-us.html">Talk to us.</a></p>
-	        	</div>        
-					</div>
-      	</div>
-      </div>
     </div>
+  </section>
 
-    
+  <div class="row">
+      <div class="large-12 columns">
+          <div class="panel">
+              <h3>Educational Technology Development Services</h3>
+
+              <div class="row">
+                  <div class="large-4 medium-4 columns">
+                      <p><a href="services.html">Custom Blackboard
+                          Development</a><br/>Need a custom Building Block
+                          written for your institution? <a
+                                  href="contact-us.html">Talk to us.</a></p>
+                  </div>
+                  <div class="large-4 medium-4 columns">
+                      <p><a href="services.html">OSS Maintenance and Support</a><br/>Development,
+                          Maintenance and Extension for Open Source LMS
+                          projects. <a href="services.html">What we can
+                              offer.</a></p>
+                  </div>
+                  <div class="large-4 medium-4 columns">
+                      <p><a href="services.html">LMS Extension Development
+                          Training</a><br/>Need training in how to write
+                          Blackboard Building Blocks? <a href="contact-us.html">Talk
+                              to us.</a></p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script>
