--- a/services.html
+++ b/services.html
@@ -9,6 +9,16 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-48874971-1', 'alltheducks.com');
+      ga('send', 'pageview');
+
+  </script>
   <nav class="top-bar" data-topbar>
       <ul class="title-area">
           <li class="name">
@@ -43,16 +53,35 @@
           </ul>
       </section>
   </nav>
-    <div class="row">
+  <div class="row">
       <div class="large-12 columns">
           <h2>Professional Services</h2>
 
           <p>All the Ducks offers a range of professional services to help you
-          meet your LMS usage and development goals. </p>
+              meet your LMS usage and development goals. </p>
+          <div class="panel">
+          <h3>Blackboard Building Block Development</h3>
+              <p>If you have particular integration requirements, or need custom
+              functionality implemented as a Building Block, we can provide a cost effective
+              service to meet your needs.</p></div>
+          <div class="panel">
+          <h3>Support and Maintenance of open source Building Blocks and
+                  extensions.</h3>
+                  <p>Need an open source Building Block, but don't have the skills
+                  in-house to support it?.  We can provide either on-going support for these tools,
+                  or time-boxed support around your upgrade window.</p>
+          </div>
+          <div class="panel">
+          <h3>Technical Training and mentoring for Blackboard development.</h3><br>
+              <p>Want to start writing Building Blocks, but don't know where to start?
+              We can provide one-off training for your developers, or an ongoing
+              support service for your technical staff.</p>
+            </div>
+          <p><a href="contact-us.html" class="button radius">contact us</a></li>
       </div>
-    </div>
+  </div>
 
-    
+
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script>
