fixed a stray line break

--- a/services.html
+++ b/services.html
@@ -72,7 +72,7 @@
                   or time-boxed support around your upgrade window.</p>
           </div>
           <div class="panel">
-          <h3>Technical Training and mentoring for Blackboard development.</h3><br>
+          <h3>Technical Training and mentoring for Blackboard development.</h3>
               <p>Want to start writing Building Blocks, but don't know where to start?
               We can provide one-off training for your developers, or an ongoing
               support service for your technical staff.</p>
