--- a/contact-failure.html
+++ b/contact-failure.html
@@ -41,6 +41,9 @@
                           <a href="about-us.html">About Us</a>
                       </li>
                       <li>
+                          <a href="http://blog.alltheducks.com">Blog</a>
+                      </li>
+                      <li>
                           <a href="contact-us.html">Contact Us</a>
                       </li>
                   </ul>
@@ -72,6 +75,9 @@
                   </li>
                   <li>
                       <a href="about-us.html">About Us</a>
+                  </li>
+                  <li>
+                      <a href="http://blog.alltheducks.com">Blog</a>
                   </li>
                   <li>
                       <a href="contact-us.html">Contact Us</a>
