--- a/contact-success.html
+++ b/contact-success.html
@@ -42,6 +42,9 @@
                           <a href="about-us.html">About Us</a>
                       </li>
                       <li>
+                          <a href="http://blog.alltheducks.com">Blog</a>
+                      </li>
+                      <li>
                           <a href="contact-us.html">Contact Us</a>
                       </li>
                   </ul>
@@ -73,6 +76,9 @@
                   </li>
                   <li>
                       <a href="about-us.html">About Us</a>
+                  </li>
+                  <li>
+                      <a href="http://blog.alltheducks.com">Blog</a>
                   </li>
                   <li>
                       <a href="contact-us.html">Contact Us</a>
