--- a/contact-us.html
+++ b/contact-us.html
@@ -43,6 +43,9 @@
                         <a href="about-us.html">About Us</a>
                     </li>
                     <li>
+                        <a href="http://blog.alltheducks.com">Blog</a>
+                    </li>
+                    <li>
                         <a href="contact-us.html">Contact Us</a>
                     </li>
                 </ul>
@@ -74,6 +77,9 @@
                 </li>
                 <li>
                     <a href="about-us.html">About Us</a>
+                </li>
+                <li>
+                    <a href="http://blog.alltheducks.com">Blog</a>
                 </li>
                 <li>
                     <a href="contact-us.html">Contact Us</a>
