--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                         <a href="about-us.html">About Us</a>
                     </li>
                     <li>
+                        <a href="http://blog.alltheducks.com">Blog</a>
+                    </li>
+                    <li>
                         <a href="contact-us.html">Contact Us</a>
                     </li>
                 </ul>
@@ -80,6 +83,9 @@
                 </li>
                 <li>
                     <a href="about-us.html">About Us</a>
+                </li>
+                <li>
+                    <a href="http://blog.alltheducks.com">Blog</a>
                 </li>
                 <li>
                     <a href="contact-us.html">Contact Us</a>
