Added a testimonial from Schelly Gardner

--- a/index.html
+++ b/index.html
@@ -133,6 +133,24 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="column">
+                <div class="panel callout">
+                    <blockquote>
+                    Southern Cross University has benefited on several occasions by our association with Wiley Fuller and
+                    Shane Argo, [the founders of All the Ducks], through our mutual association with the Blackboard User
+                    community.  Separately they are knowledgeable, intuitive, highly skilled and very helpful.  When teamed
+                    together, they are formidable and relentless in finding solutions to meet your needs.  Present a problem and
+                    they are driven to find a solution and once found, they are incredibly generous, embracing the culture of
+                    open source wholeheartedly. I have no hesitation to recommend them with the highest accolades.
+                    </blockquote>
+                    <cite>
+                        Schelly Gardner | eLearning Environment Systems Manager | Technology Services  | Southern Cross University
+                    </cite>
+                </div>
+            </div>
+        </div>
+
         <a class="exit-off-canvas"></a>
 
     </div>
